SERVER-32284 add minSnapshot to failed WC message in ReplicationCoordinator::awaitReplication()